# bus_fares_web_scriping

./: README.md
bus_fares_web_scriping/: .cruft.json  AUTHORS  CONTRIBUTING.md  NWEC - Origin and Destination List - Final.xlsx  NWEC - Origin and Destination List.xlsx  README.md  ResultsConsiderations.docx  WebScripingAll.py  mkdocs.yml  pyproject.toml
bus_fares_web_scriping/.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCS.yml  FEATURE-REQUEST.yml
bus_fares_web_scriping/.github/workflows/: commit-ci.yml  daily-scheduled-ci.yml  docs.yml  pr-ci.yml  pre-release.yml  release.yml
bus_fares_web_scriping/Dictionaries/: EmberDictionary.xlsx  FlixbusDictionary.xlsx  FlixbusDictionary_FinalUUID.xlsx  MegabusDictionary.xlsx
bus_fares_web_scriping/Ember Runs/: Emberquotes_cleaned.csv
bus_fares_web_scriping/Ember Runs/SS/: Emberquotes_data_Try.csv  Emberquotes_data_TryFull.csv
bus_fares_web_scriping/Flixbus Runs/: Flixbusquotes_data.csv
bus_fares_web_scriping/Megabus Runs/: Megabusquotes_cleaned.csv  Megabusquotes_data.csv
bus_fares_web_scriping/SS/: Web Scriping Ember.ipynb  Web Scriping Flixbus.ipynb  Web Scriping Megabus.ipynb
bus_fares_web_scriping/SS/43-45 (Haymarket - Islington)/: 43-45_0111.xlsx  43-45_0211.xlsx  43-45_0311.xlsx  43-45_2810.xlsx  43-45_2910.xlsx  43-45_3010.xlsx  43-45_3110.xlsx
bus_fares_web_scriping/SS/43-54 (Edinburgh (Haymarket) - Bridge of Earn )/: 43-54_0111.xlsx  43-54_0211.xlsx  43-54_0311.xlsx  43-54_2810.xlsx  43-54_2910.xlsx  43-54_3010.xlsx  43-54_3110.xlsx
bus_fares_web_scriping/SS/45 - 54 (Islington P&R - Bridge of Earn)/: 45-54_0111.xlsx  45-54_0211.xlsx  45-54_0311.xlsx  45-54_2810.xlsx  45-54_2910.xlsx  45-54_3010.xlsx  45-54_3110.xlsx
bus_fares_web_scriping/SS/45-443 (Islington P&R - Haymarket)/: 45-43_0111.xlsx  45-43_0211.xlsx  45-43_0311.xlsx  45-43_2810.xlsx  45-43_2910.xlsx  45-43_3010.xlsx  45-43_3110.xlsx
bus_fares_web_scriping/SS/49-45 (Edinburgh Airport - Islington P&R)/: 49-45_2810.xlsx
bus_fares_web_scriping/SS/54-49 (Bridge of Earn - Edinburgh Airport )/: 54-49_0111.xlsx  54-49_0211.xlsx  54-49_0311.xlsx  54-49_2810.xlsx  54-49_2910.xlsx  54-49_3010.xlsx  54-49_3310.xlsx
bus_fares_web_scriping/conda.recipe/: meta.yaml
bus_fares_web_scriping/docs/: contributing.md  installation.md
bus_fares_web_scriping/docs/api/: cli.md
bus_fares_web_scriping/env/: pyvenv.cfg
bus_fares_web_scriping/env/Scripts/: activate  activate.bat
bus_fares_web_scriping/examples/: 1_intro_to_bus_fares_web_scriping.ipynb
bus_fares_web_scriping/newdirectory/: filetrial.txt
bus_fares_web_scriping/src/bus_fares_web_scriping/: __init__.py  cli.py
bus_fares_web_scriping/tests/: conftest.py  test_cli.py  test_core.py
